move to nuget lib

--- a/AutoLoginFbKaraokeLd/AutoLoginFbKaraokeLd.csproj
+++ b/AutoLoginFbKaraokeLd/AutoLoginFbKaraokeLd.csproj
@@ -11,61 +11,19 @@
 
 	<ItemGroup>
 		<Folder Include="AppData\Images\" />
-		<Folder Include="AppData\x64\" />
 		<Folder Include="Properties\" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Include="..\..\..\Library\TqkLibrary\TqkLibrary\bin\Release\net462\x64\cvextern.dll" Link="AppData\x64\cvextern.dll">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </None>
-	  <None Include="..\..\..\Library\TqkLibrary\TqkLibrary\bin\Release\net462\x64\opencv_videoio_ffmpeg454_64.dll" Link="AppData\x64\opencv_videoio_ffmpeg454_64.dll">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </None>
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="Extended.Wpf.Toolkit" Version="4.2.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+		<PackageReference Include="TqkLibrary.Adb" Version="1.0.0-build2021122100" />
+		<PackageReference Include="TqkLibrary.Media.Images" Version="1.0.0-build2021122100" />
+		<PackageReference Include="TqkLibrary.Queues" Version="1.0.0-build2021122700" />
+		<PackageReference Include="TqkLibrary.WinApi" Version="1.0.0-build2021122100" />
+		<PackageReference Include="TqkLibrary.WpfUi" Version="1.0.0-build2021122100" />
 		<PackageReference Include="TwoFactorAuth.Net" Version="1.4.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Reference Include="Newtonsoft.Json">
-	    <HintPath>..\..\..\Library\TqkLibrary\TqkLibrary\bin\Release\net462\Newtonsoft.Json.dll</HintPath>
-	  </Reference>
-	  <Reference Include="PInvoke.Gdi32">
-	    <HintPath>..\..\..\Library\TqkLibrary\TqkLibrary\bin\Release\net462\PInvoke.Gdi32.dll</HintPath>
-	  </Reference>
-	  <Reference Include="PInvoke.Kernel32">
-	    <HintPath>..\..\..\Library\TqkLibrary\TqkLibrary\bin\Release\net462\PInvoke.Kernel32.dll</HintPath>
-	  </Reference>
-	  <Reference Include="PInvoke.User32">
-	    <HintPath>..\..\..\Library\TqkLibrary\TqkLibrary\bin\Release\net462\PInvoke.User32.dll</HintPath>
-	  </Reference>
-	  <Reference Include="PInvoke.Windows.Core">
-	    <HintPath>..\..\..\Library\TqkLibrary\TqkLibrary\bin\Release\net462\PInvoke.Windows.Core.dll</HintPath>
-	  </Reference>
-	  <Reference Include="PInvoke.Windows.ShellScalingApi">
-	    <HintPath>..\..\..\Library\TqkLibrary\TqkLibrary\bin\Release\net462\PInvoke.Windows.ShellScalingApi.dll</HintPath>
-	  </Reference>
-	  <Reference Include="System.Drawing.Common">
-	    <HintPath>..\..\..\Library\TqkLibrary\TqkLibrary\bin\Release\net462\System.Drawing.Common.dll</HintPath>
-	  </Reference>
-	  <Reference Include="TqkLibrary.Adb">
-	    <HintPath>..\..\..\Library\TqkLibrary\TqkLibrary\bin\Release\net462\TqkLibrary.Adb.dll</HintPath>
-	  </Reference>
-	  <Reference Include="TqkLibrary.Media.Images">
-	    <HintPath>..\..\..\Library\TqkLibrary\TqkLibrary\bin\Release\net462\TqkLibrary.Media.Images.dll</HintPath>
-	  </Reference>
-	  <Reference Include="TqkLibrary.Queues">
-	    <HintPath>..\..\..\Library\TqkLibrary\TqkLibrary\bin\Release\net462\TqkLibrary.Queues.dll</HintPath>
-	  </Reference>
-	  <Reference Include="TqkLibrary.WinApi">
-	    <HintPath>..\..\..\Library\TqkLibrary\TqkLibrary\bin\Release\net462\TqkLibrary.WinApi.dll</HintPath>
-	  </Reference>
-	  <Reference Include="TqkLibrary.WpfUi">
-	    <HintPath>..\..\..\Library\TqkLibrary\TqkLibrary\bin\Release\net462\TqkLibrary.WpfUi.dll</HintPath>
-	  </Reference>
 	</ItemGroup>
 
 	<ItemGroup>
